# langchain-stack

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PHASE3_DEPLOY_GUIDE.md  README.md  docker-compose.yml  judge.py  judge_rules.yaml  llm_as_judge.py  main.py  metrics.py  models.yaml  provider.py  pytest.ini  reasoner.py  requirements.txt  retriever.py  settings.py
.claude/: settings.json
app/: Dockerfile  _pyversion.py  main.py  pyproject.toml  requirements.txt  settings.py  tracing.py
app/chains/: judge.py  llm_as_judge.py
app/evaluation/: metrics.py  run_ab.py  run_cp_eval.py
app/models/: chroma.py  embedding_adapters.py  embeddings.py  opensearch.py  provider.py
app/rag/: access_control.py  audit.py  headers.py  ingest.py  retriever.py
config/: ab-queries.yaml  access_control.yaml  judge_rules.yaml  models.yaml
config/clickhouse/: cluster.xml
scripts/: check_uv_lock_diff.py
tests/: conftest.py  create_fixtures.py  test_feature-direct-fallback.py  test_feature-phase4a-ingestion.py  test_feature-phase4b-access-control.py  test_feature-phase4c-rag-retrieval.py  test_feature-phase4f-headers.py  test_feature-phase4f-hybrid-search.py  test_feature-phase4f-opensearch-mapping.py  test_feature-phase5a-tracing.py  test_feature-phase5b-ragas-tracing.py  test_feature-phase5c-score-recording.py  test_feature-user-acl.py  test_ingest.py  test_main-abac-enforcement.py  test_main-abac-yaml.py  test_main-datasource-mgmt.py  test_main-embedding-adapter.py
tests/fixtures/: sample.txt
tests/fixtures-phase4a/: sample.md
