[project]
name = "langchain-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Phase 2: Skeleton
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    # Phase 3B: RAGAS
    "ragas>=0.2,<0.3",
    "sentence-transformers>=3.0",
    "langchain-community>=0.3",
    # Phase 4A: Ingestion
    "chromadb>=1.0",
    # Phase 4F: OpenSearch
    "opensearch-py>=2.4",
    "langchain-text-splitters>=0.3",
    "pymupdf>=1.25",
    "openpyxl>=3.1",
    "unstructured>=0.16",
    "python-multipart>=0.0.18",
    "markdown",
    "msoffcrypto-tool>=5.0",
    "python-pptx>=1.0",
    "python-docx>=1.0",
    # Phase 5: Langfuse tracing
    "langfuse>=3.14,<4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
